--- a/style/components/cards.css
+++ b/style/components/cards.css
@@ -1,7 +1,6 @@
 .cards{
     background-color: black;
    width: 100%;
-   height: 298px;
    color: rgb(247, 244, 244);
 }
 .cards-main{
@@ -14,8 +13,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 298px;
-    padding: 15px 10px 5px 10px;
+    padding: 30px 15px 50px;
+    position: relative;
+
+}
+.cards-item-single{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
+}
+
+.cards-item:nth-child(2n){
+background-image: url("../../images/bgn1.jpg");
+}
+.cards-item:nth-child(2n) .filter{
+    color: #fff;
+    background-color: rgb(17, 17, 17, 0.7);
+}
+.cards-item svg{
+    height: 65px;
+    width: 65px;
+    margin: 20px 0;
+
+}
+.filter{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0%;
 }
 .dark{
     background-color: black;
@@ -27,5 +54,23 @@ h3, p {
     color: #fff;
     margin-top: 20px;
     text-align: center;
+
+}
+.cards p{
+    text-align: center;
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 22.4px;
+    margin: 20px 0 0;
+}
+.cards h3{
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.6px;
+    margin: 0;
+
+
 }
 
